--- a/app/worshipBurn.html
+++ b/app/worshipBurn.html
@@ -9,7 +9,7 @@ current: worshipBurn
   <h1 class="my-5 border-width pl-3">線上祭拜</h1>
 
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
           <div class="d-flex justify-content-end align-items-center">
@@ -52,17 +52,17 @@ current: worshipBurn
   </div>
   <div class="row justify-content-center">
     <div class="col-9">
-      <h5 class="ml-5 pl-3 py-5">步驟五：網路燒金</h5>
-      <div class="ml-5 pl-3 bg bg-worship"></div>
+      <h5 class="ml-sm-5 pl-sm-3 py-5">步驟五：網路燒金</h5>
+      <div class="ml-sm-5 pl-sm-3 bg bg-worship"></div>
       <div class="my-5 text-right">
         <button
           type="button"
-          class="btn btn-outline-primary px-4 mr-3"
+          class="btn btn-outline-primary px-4 mr-3 worship-btn mb-3 mb-sm-0"
           onclick="location.href='./worshipShuwen.html'"
         >
           上一步
         </button>
-        <button type="button" class="btn btn-primary px-4" id="stepFive">下一步</button>
+        <button type="button" class="btn btn-primary px-4 worship-btn" id="stepFive">下一步</button>
       </div>
     </div>
   </div>
