--- a/app/worshipCarryOut.html
+++ b/app/worshipCarryOut.html
@@ -9,7 +9,7 @@ current: worshipCarryOut
   <h1 class="my-5 border-width pl-3">線上祭拜</h1>
 
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
           <div class="d-flex justify-content-end align-items-center">
@@ -52,14 +52,14 @@ current: worshipCarryOut
   </div>
   <div class="row justify-content-center">
     <div class="col-9 text-center">
-      <p class="h3 ml-5 pl-3 my-5">您好 感謝您!</p>
-      <p class="h3 ml-5 pl-3 mb-5">
+      <p class="h3 ml-sm-5 pl-sm-3 my-5">您好 感謝您!</p>
+      <p class="h3 ml-sm-5 pl-sm-3 mb-5 worship-thanks-text">
         本次網路燒金已經順利完成。感謝您支持環保愛地球<br />線上燒金環保又便利，歡迎多加分享利用。<br />感謝您一起為環保盡一份心力!
       </p>
       <div class="my-5 text-right">
         <button
           type="button"
-          class="btn btn-outline-primary px-4"
+          class="btn btn-outline-primary px-4 worship-btn"
           onclick="location.href='./index.html'"
         >
           回首頁
