--- a/app/worshipUserInfo.html
+++ b/app/worshipUserInfo.html
@@ -9,7 +9,7 @@ current: worshipUserInfo
   <h1 class="my-5 border-width pl-3">線上祭拜</h1>
 
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-11 col-sm-8 pl-2 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col-2 pr-0 position-relative">
           <div class="d-flex justify-content-end align-items-center">
@@ -53,9 +53,9 @@ current: worshipUserInfo
   <div class="row justify-content-center">
     <div class="col-9">
 
-      <h5 class="ml-5 pl-3 py-5">步驟一：請輸入您的資料</h5>
+      <h5 class="ml-sm-5 pl-sm-3 py-5">步驟一：請輸入您的資料</h5>
 
-      <div class="ml-5 pl-3">
+      <div class="ml-sm-5 pl-sm-3">
         <div class="form-group">
           <label for="userName"
             >姓名 <span class="text-primary">(必填)</span></label
@@ -94,8 +94,8 @@ current: worshipUserInfo
         </div>
       </div>
       <div class="my-5 text-right">
-        <button type="button" class="btn btn-outline-primary px-4 mr-3" onclick="location.href='worshipStart.html'">上一步</button>
-        <button type="button" class="btn btn-primary px-4" id="stepOne">下一步</button>
+        <button type="button" class="btn btn-outline-primary px-4 mr-3 worship-btn mb-3 mb-sm-0" onclick="location.href='worshipStart.html'">上一步</button>
+        <button type="button" class="btn btn-primary px-4 worship-btn" id="stepOne">下一步</button>
       </div>
     </div>
   </div>
