--- a/app/donate.html
+++ b/app/donate.html
@@ -485,43 +485,43 @@ current: donate
       <div class="modal-body text-center">
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_01.JPG"
+          src="./assets/images/Hi-Life/HL_01.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_02.JPG"
+          src="./assets/images/Hi-Life/HL_02.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_03.JPG"
+          src="./assets/images/Hi-Life/HL_03.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_04.JPG"
+          src="./assets/images/Hi-Life/HL_04.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_05.JPG"
+          src="./assets/images/Hi-Life/HL_05.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_06.JPG"
+          src="./assets/images/Hi-Life/HL_06.jpg"
           alt="運送聯單填寫範例"
         />
         <i class="fas fa-arrow-down fa-2x w-100 text-primary my-3"></i>
         <img
           class="img-fluid"
-          src="./assets/images/Hi-Life/HL_07.JPG"
+          src="./assets/images/Hi-Life/HL_07.jpg"
           alt="運送聯單填寫範例"
         />
       </div>
