--- a/app/worshipShuwen.html
+++ b/app/worshipShuwen.html
@@ -9,7 +9,7 @@ current: worshipShuwen
   <h1 class="my-5 border-width pl-3">線上祭拜</h1>
 
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
           <div class="d-flex justify-content-end align-items-center">
@@ -52,26 +52,26 @@ current: worshipShuwen
   </div>
   <div class="row justify-content-center">
     <div class="col-9">
-      <h5 class="ml-5 pl-3 py-5">
+      <h5 class="ml-sm-5 pl-sm-3 py-5">
         步驟四：請默念疏文
         <button type="button" class="btn btn-outline-primary d-none">
           播放語音
         </button>
       </h5>
 
-      <ul class="ml-5 pl-3">
+      <ul class="ml-sm-5 pl-sm-3">
         <li>姓名:&emsp;<span id="userInfo_name"></span></li>
         <li>公司:&emsp;<span id="userInfo_companyName"></span></li>
         <li>地址:&emsp;<span id="userInfo_address"></span></li>
       </ul>
 
-      <div class="ml-5 pl-3 bg bg-Shuwen"></div>
+      <div class="ml-sm-5 pl-sm-3 bg bg-Shuwen"></div>
 
       <div class="my-5 text-right">
-        <button type="button" class="btn btn-outline-primary px-4 mr-3" onclick="location.href='./worship.html'">
+        <button type="button" class="btn btn-outline-primary px-4 mr-3 worship-btn mb-3 mb-sm-0" onclick="location.href='./worship.html'">
           上一步
         </button>
-        <button type="button" class="btn btn-primary px-4" id="stepFour">下一步</button>
+        <button type="button" class="btn btn-primary px-4 worship-btn" id="stepFour">下一步</button>
       </div>
     </div>
   </div>
