--- a/app/information.html
+++ b/app/information.html
@@ -32,7 +32,7 @@ current: information
       </a>
     </div>
     <div class="col-md-6 mb-3 mb-md-0">
-      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="#" role="button">
+      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="templeInfo.html" role="button">
         <!-- <object type="image/svg+xml" data="./assets/images/temple.svg" class="icon mr-3"></object> -->
         寺廟資訊
       </a>
