--- a/app/serviceDownload.html
+++ b/app/serviceDownload.html
@@ -20,19 +20,19 @@ current: serviceDownload
   <div class="mb-5">
     <ul class="pl-3 my-3">
       <li class="mb-3">普渡疏文：
-        <a href="/assets/file/普渡疏文_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的普渡疏文" targe="_blank">彩色</a>
-        <a href="/assets/file/普渡疏文_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的普渡疏文" targe="_blank">黑白</a>
+        <a href="/assets/file/普渡疏文_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的普渡疏文" target="_blank">彩色</a>
+        <a href="/assets/file/普渡疏文_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的普渡疏文" target="_blank">黑白</a>
       </li>
       <li class="mb-3">功德狀：
-        <a href="/assets/file/功德狀.pdf" class="text-decoration-none" title="另開視窗，下載功德狀" targe="_blank">正面</a>
+        <a href="/assets/file/功德狀.pdf" class="text-decoration-none" title="另開視窗，下載功德狀" target="_blank">正面</a>
       </li>
       <li class="mb-3">紙錢專用袋封條：
-        <a href="/assets/file/封條_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的封條" targe="_blank">封條 (彩色)</a>
-        <a href="/assets/file/封條_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的封條" targe="_blank">封條 (黑白)</a>
+        <a href="/assets/file/封條_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的封條" target="_blank">封條 (彩色)</a>
+        <a href="/assets/file/封條_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的封條" target="_blank">封條 (黑白)</a>
       </li>
       <li class="mb-3">
         <a href="/assets/file/以功代金文宣傳單.pdf" class="text-decoration-none" title="另開視窗，下載以功代金的文宣傳單"
-          targe="_blank">以功代金文宣傳單</a>
+          target="_blank">以功代金文宣傳單</a>
       </li>
     </ul>
   </div>
