修正修正file錯誤

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@ current: index
         <h2 class="h4 border-width pl-3 py-2 mb-3">集中燒化時程</h2>
 
         <div class="flex-column d-sm-flex bg-info p-2 align-items-end">
-          <div class="col-12 col-md-8">
+          <div class="col-12">
             <ul class="list-unstyled m-0">
               <li>
                 <span class="text-primary">春節祭祖暨天公生</span>
@@ -81,7 +81,7 @@ current: index
               </li>
             </ul>
           </div>
-          <div class="col-md-4 d-flex justify-content-end">
+          <div class="col-md-6 d-flex justify-content-end">
             <a href="templeInfo.html" class="btn btn-primary px-4" role="button">
               查看更多…
             </a>
@@ -294,7 +294,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare20.jpg" alt="社福團體" class="carousel-img" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.facebook.com/hasbf.official/" target="_blank" class="stretched-link"></a><small>社團法人高雄市自強身障關懷協會</small>
+              <a href="https://www.facebook.com/hasbf.official/" target="_blank" class="stretched-link"><small>社團法人高雄市自強身障關懷協會</small></a>
             </div>
           </div>
         </div>
