--- a/app/serviceDownload.html
+++ b/app/serviceDownload.html
@@ -20,18 +20,18 @@ current: serviceDownload
   <div class="mb-5">
     <ul class="pl-3 my-3">
       <li class="mb-3">普渡疏文：
-        <a href="/assets/file/普渡疏文_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的普渡疏文" target="_blank">彩色</a>
-        <a href="/assets/file/普渡疏文_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的普渡疏文" target="_blank">黑白</a>
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E6%99%AE%E6%B8%A1%E7%96%8F%E6%96%87_%E5%BD%A9%E8%89%B2.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的普渡疏文" target="_blank">彩色</a>
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E6%99%AE%E6%B8%A1%E7%96%8F%E6%96%87_%E9%BB%91%E7%99%BD.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的普渡疏文" target="_blank">黑白</a>
       </li>
       <li class="mb-3">功德狀：
-        <a href="/assets/file/功德狀.pdf" class="text-decoration-none" title="另開視窗，下載功德狀" target="_blank">正面</a>
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E5%8A%9F%E5%BE%B7%E7%8B%80.pdf" class="text-decoration-none" title="另開視窗，下載功德狀" target="_blank">正面</a>
       </li>
       <li class="mb-3">紙錢專用袋封條：
-        <a href="/assets/file/封條_彩色.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的封條" target="_blank">封條 (彩色)</a>
-        <a href="/assets/file/封條_黑白.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的封條" target="_blank">封條 (黑白)</a>
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E5%B0%81%E6%A2%9D_%E5%BD%A9%E8%89%B2.pdf" class="text-decoration-none" title="另開視窗，下載彩色版的封條" target="_blank">封條 (彩色)</a>
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E5%B0%81%E6%A2%9D_%E9%BB%91%E7%99%BD.pdf" class="text-decoration-none" title="另開視窗，下載黑白版的封條" target="_blank">封條 (黑白)</a>
       </li>
       <li class="mb-3">
-        <a href="/assets/file/以功代金文宣傳單.pdf" class="text-decoration-none" title="另開視窗，下載以功代金的文宣傳單"
+        <a href="https://github.com/yinmin8610/kaohsiung-a11y-2.0/raw/file/app/assets/file/%E4%BB%A5%E5%8A%9F%E4%BB%A3%E9%87%91%E6%96%87%E5%AE%A3%E5%82%B3%E5%96%AE.pdf" class="text-decoration-none" title="另開視窗，下載以功代金的文宣傳單"
           target="_blank">以功代金文宣傳單</a>
       </li>
     </ul>
