--- a/app/informationPicture_107.html
+++ b/app/informationPicture_107.html
@@ -27,7 +27,7 @@ current: informationPicture_107
   <div class="mb-5">
     <div class="list-group">
       <!-- 107 年以功代金成果發表會 (107.10.12) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">以功代金成果發表會</h2>
           <h2 class="h5 mb-2">107.10.12</h2>
@@ -47,7 +47,7 @@ current: informationPicture_107
       </div>
 
       <!-- 107 年中元普渡紙錢集中燒辦理現況 (107.08.11~09.09) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡紙錢集中燒辦理現況</h2>
           <h2 class="h5 mb-2">107.08.11 至 107.09.09</h2>
@@ -67,7 +67,7 @@ current: informationPicture_107
       </div>
 
       <!-- 107 年中元普渡以功代金暨淨爐灑淨祈福法會 (107.08.07) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
           <h2 class="h5 mb-2">107.08.07</h2>
@@ -84,7 +84,7 @@ current: informationPicture_107
       </div>
 
       <!-- 清明節紙錢集中燒 (107.03.25-107.04.07) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
           <h2 class="h5 mb-2">107.03.25 至 107.04.07</h2>
@@ -101,7 +101,7 @@ current: informationPicture_107
       </div>
 
       <!-- 春節及天公生紙錢集中燒 (107.02.21-107.02.27) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
           <h2 class="h5 mb-2">107.02.21 至 107.02.27</h2>
@@ -120,7 +120,7 @@ current: informationPicture_107
       </div>
 
       <!-- 107 年高雄市成果發表會 (107.01.30) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">高雄市成果發表會</h2>
           <h2 class="h5 mb-2">107.01.30</h2>
