--- a/app/informationPicture_109.html
+++ b/app/informationPicture_109.html
@@ -21,7 +21,7 @@ current: informationPicture_109
   <div class="mb-5">
     <div class="list-group">
       <!-- 109 年中元普渡以功代金暨淨爐灑淨祈福法會 (109.08.12) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
           <h2 class="h5 mb-2">109.08.12</h2>
@@ -38,7 +38,7 @@ current: informationPicture_109
       </div>
 
       <!-- 清明節紙錢集中燒 (109.03.28-109.04.06) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
           <h2 class="h5 mb-2">109.03.28 至 109.04.06</h2>
@@ -55,7 +55,7 @@ current: informationPicture_109
       </div>
 
       <!-- 春節及天公生紙錢集中燒 (109.01.29-109.02.03) -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <div class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
           <h2 class="h5 mb-2">109.01.29 至 109.02.03</h2>
