新增無障礙功能

--- a/app/copyright.html
+++ b/app/copyright.html
@@ -7,15 +7,18 @@ current: copyright
 
 <div class="container">
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">著作權聲明</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="著作權聲明">著作權聲明</li>
     </ol>
   </nav>
-
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">著作權聲明</h1>
-
+  <!-- 主要內容 -->
   <ol class="pl-3 mb-5">
     <li class="mb-3">本網站上刊載之所有內容，除著作權法規定不得為著作權之標的（如法律、命令、公務員撰擬之講稿、新聞稿等 -- 請參考著作權法第 9
       條規定）外，其他包括文字敘述、攝影、圖片、錄音、影像及其他資訊，均受著作權法保護。
