--- a/app/privacy.html
+++ b/app/privacy.html
@@ -7,15 +7,18 @@ current: privacy
 
 <div class="container">
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">隱私權安全資訊</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="隱私權安全資訊">隱私權安全資訊</li>
     </ol>
   </nav>
-
+  <!-- 標題 -->
   <h1 class="border-width my-5 pl-3">隱私權安全資訊</h1>
-
+  <!-- 主要內容 -->
   <p class="my-3">
     親愛的網友，本網站非常重視並尊重網友的隱私權。為了幫助您瞭解本網站如何收集、應用及保護您的個人資訊，請詳細閱讀以下隱私權暨資訊安全保護政策，本政策將幫助您了解，在您使用本網站以及其延伸服務網站所提供的服務時，有關收集、運用及保護網友個人資料的政策與原則。
   </p>
