--- a/app/activity.html
+++ b/app/activity.html
@@ -5,24 +5,27 @@ engine: ejs
 current: activity
 ---
 
-<div class="container">
+<div class="content container">
 
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">宣導專區</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="宣導專區">宣導專區</li>
     </ol>
   </nav>
   <!-- 標題 -->
   <h1 class="border-width my-5 pl-3">宣導專區</h1>
-  <!-- 按鈕 -->
-  <div class="row mb-5">
+  <!-- 主要內容 -->
+  <section class="row mb-5">
     <div class="col-md-6">
-      <a href="donate.html" class="btn btn-info py-4 btn-block mb-3">以功代金</a>
+      <a href="donate.html" class="btn btn-info py-4 btn-block mb-3" role="button" title="以功代金">以功代金</a>
     </div>
     <div class="col-md-6">
-      <a href="burn.html" class="btn btn-info py-4 btn-block mb-3">集中燒化</a>
+      <a href="burn.html" class="btn btn-info py-4 btn-block mb-3" role="button" title="集中燒化">集中燒化</a>
     </div>
-  </div>
+  </section>
 </div>
