無障礙修改

--- a/app/informationNews_108.html
+++ b/app/informationNews_108.html
@@ -5,60 +5,68 @@ engine: ejs
 current: informationNews_108
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">108 年度</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="108 年度">108 年度</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">108 年度</h1>
 
+  <!-- 主要內容 -->
   <div class="mb-5">
-
     <div class="list-group">
-      <!-- 1 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <!-- 108.12.30 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">金紙搭上環保潮　實質效力存疑慮</h2>
         <p><small class="mb-2">108.12.30</small></p>
         <p class="text-mul-truncate">
           現今許多廟宇為減少空污，紛紛降低香品燃燒量，像是龍山寺在今年五月起禁點蠟燭。不僅廟方響應環保，部分民眾也購買「環保化」的祭祀用品，像是環保金紙及金爐等。然而目前國內卻無法規明確規範環保金紙的成分，有些業者稱環保金紙的原料是環保特點、有些業者則認為提升金紙面額，以減少燃燒量即為環保。業者對於環保金紙定義分歧，政府亦未立法規範，環保金紙是否名副其實達到環保效果，仍無確切依據。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1081230.html" role="button">閱讀更多...</a>
+          <a class="text-primary stretched-link" href="information_1081230.html" title="前往 108 年 12 月 30 日的新聞內容" role="button">閱讀更多...</a>
         </div>
-      </div>
-      <!-- 2 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      </section>
+      <!-- 108.11.11 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">高雄以功代金 14 年 減少燃燒紙錢 179 公噸 企業社區大樓齊協力 新住民一起環保做公益</h2>
         <p><small class="mb-2">108.11.11</small></p>
         <p class="text-mul-truncate">
           環保局今 (7) 日舉行「以功代金」成果發表會，自 95 年推動該項政策 14
           年來，總響應金額將近一千五百萬元，有社區大樓在管委會帶動下，高達八成住戶中元普渡時選擇以做功德的方式代替舊有實體紙錢燒化，也有食品公司近半數員工及新住民把家裡普渡拜拜不燒金省下來的錢，捐給社福團體做愛心，一起愛護這片土地。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1081111.html" role="button">
+          <a class="text-primary stretched-link" href="information_1081111.html" title="前往 108 年 11 月 11 日的新聞內容" role="button">
             閱讀更多...
           </a>
         </div>
-      </div>
-      <!-- 3 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      </section>
+      <!-- 108.10.29 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">無菸婦氣喘不停罹「肺阻塞」　醫護「隔空診斷」患者住家神明廳有異</h2>
         <p><small class="mb-2">108.10.29</small></p>
         <p class="text-mul-truncate">
           高雄市有一名婦人發生氣喘，沒有抽菸的她覺得很奇怪，怎麼會一直喘不停來求助醫師，經過診斷發現是肺阻塞，結果醫護團隊前往這名婦人家中檢測病原，這才發現住家空氣數值 PM2.5 偏高，原來是她天天燒香拜佛，讓室內空氣污染嚴重。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1081029.html" role="button">
+          <a class="text-primary stretched-link" href="information_1081029.html" title="前往 108 年 10 月 29 日的新聞內容" role="button">
             閱讀更多...
           </a>
         </div>
-      </div>
+      </section>
     </div>
   </div>
 </div>
