--- a/app/information_1081029.html
+++ b/app/information_1081029.html
@@ -5,24 +5,30 @@ engine: ejs
 current: information_1081029
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews_108.html" class="text-dark">108 年度</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">無菸婦氣喘不停罹「肺阻塞」　醫護「隔空診斷」患者住家神明廳有異</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews_108.html" class="text-dark" title="108 年度">108 年度</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="新聞標題">無菸婦氣喘不停罹「肺阻塞」　醫護「隔空診斷」患者住家神明廳有異</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="border-width mt-5 pl-3">無菸婦氣喘不停罹「肺阻塞」　醫護「隔空診斷」患者住家神明廳有異</h1>
   <p><small>更新日期：108.10.29</small></p>
 
+  <!-- 主要內容 -->
   <div class="row my-5">
-    <!-- 左欄 -->
-    <div class="col-md-8">
+    <!-- 新聞內文 -->
+    <section class="col-md-8">
       <p>
         高雄市有一名婦人發生氣喘，沒有抽菸的她覺得很奇怪，怎麼會一直喘不停來求助醫師，經過診斷發現是肺阻塞，結果醫護團隊前往這名婦人家中檢測病原，這才發現住家空氣數值 PM2.5 偏高，原來是她天天燒香拜佛，讓室內空氣污染嚴重。
       </p>
@@ -38,8 +44,8 @@ current: information_1081029
         7 成，同時也呼籲民眾燒香拜拜的時候，一定要注意通風，盡量不要燒紙錢。
       </p>
       <a href="https://www.ettoday.net/news/20191025/1565237.htm" target="_blank" title="另開分頁，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
-    </div>
-    <!-- 右欄 -->
-    <div class="col-md-4"></div>
+    </section>
+    <!-- 預留空白處 -->
+    <section class="col-md-4"></section>
   </div>
 </div>
