--- a/app/information_1081111.html
+++ b/app/information_1081111.html
@@ -5,26 +5,32 @@ engine: ejs
 current: information_1081111
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews_108.html" class="text-dark">108 年度</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">高雄以功代金 14 年 減少燃燒紙錢 179 公噸 企業社區大樓齊協力 新住民一起環保做公益</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews_108.html" class="text-dark" title="108 年度">108 年度</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="新聞標題">高雄以功代金 14 年 減少燃燒紙錢 179 公噸 企業社區大樓齊協力 新住民一起環保做公益</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="border-width mt-5 pl-3">高雄以功代金 14 年 減少燃燒紙錢 179 公噸 企業社區大樓齊協力 新住民一起環保做公益</h1>
   <p><small>更新日期：108.11.11</small></p>
 
+  <!-- 主要內容 -->
   <div class="row my-5">
-    <!-- 左欄 -->
-    <div class="col-md-8">
+    <!-- 新聞內文 -->
+    <section class="col-md-8">
       <p>
-        環保局<strong>今 (7) 日</strong>舉行「以功代金」成果發表會，自<strong>95 年</strong>推動該項政策<strong>14
+        環保局今 (7) 日舉行「以功代金」成果發表會，自<strong> 95 年</strong>推動該項政策<strong> 14
           年</strong>來，總響應金額<strong>將近一千五百萬元</strong>，有社區大樓在管委會帶動下，高達八成住戶中元普渡時選擇以做功德的方式代替舊有實體紙錢燒化，也有食品公司近半數員工及新住民把家裡普渡拜拜不燒金省下來的錢，捐給社福團體做愛心，一起愛護這片土地。
       </p>
       <p>
@@ -35,13 +41,13 @@ current: information_1081111
         10 多位新住民一起環保做公益，愛護這片大家共同生活的土地。
       </p>
       <p>
-        環保局表示自<strong>95 年</strong>推動以功代今政策<strong>14 年</strong>來，響應金額從<strong>95 年</strong>的<strong>18 萬元</strong>，逐年呈現穩定增加，尤其自<strong>106 年</strong>首創全年與四大超商合作，讓民眾隨時可透過全家、OK、萊爾富、統一等四大超商電子通路平台，捐助包括心路、家扶、勵馨、創世基金會等社福團體，響應金額大幅增加，今年截至<strong>10 月底止</strong>，響應金額已達<strong>250 萬元</strong>，統計<strong>14 年</strong>來響應金額累積達<strong>一千五百萬元</strong>，透過<strong>17 家</strong>社福團體，幫助對象已超過千人，若換算成減少燃燒紙錢數量約<strong>179 公噸</strong>，相當於減少排放二氧化碳<strong>268 噸</strong>，約等於<strong>893 萬棵樹</strong>一日吸收的二氧化碳量，同時也減少排放細懸浮微粒 (PM2.5)<strong>0.43 公噸</strong>。
+        環保局表示自 95 年推動以功代今政策 14 年來，響應金額從 95 年的 18 萬元，逐年呈現穩定增加，尤其自<strong> 106 年</strong>首創全年與四大超商合作，讓民眾隨時可透過全家、OK、萊爾富、統一等四大超商電子通路平台，捐助包括心路、家扶、勵馨、創世基金會等社福團體，響應金額大幅增加，今年截至10 月底止，響應金額已達 250 萬元，統計 14 年來響應金額累積達<strong>一千五百萬元</strong>，透過<strong> 17 家</strong>社福團體，幫助對象已超過千人，若換算成減少燃燒紙錢數量約<strong> 179 公噸</strong>，相當於減少排放二氧化碳<strong> 268 噸</strong>，約等於 893 萬棵樹一日吸收的二氧化碳量，同時也減少排放細懸浮微粒 (PM2.5)<strong> 0.43 公噸</strong>。
       </p>
       <p>
         環保局強調，未來將透過網站或諮詢專線加強宣導、持續擴大邀集社福團體加入參與及落實校園基礎教育宣導等三大面向，提升民眾接受度，讓民眾將原本購買紙錢的費用捐助給社福團體，將對先人與神明的心意，轉化為直接幫助弱勢團體的扶助力量，減碳助人，做環保又兼顧公益，讓更具體的功德迴向給先人，共同攜手維護高雄市空氣品質。
       </p>
-    </div>
-    <!-- 右欄 -->
-    <div class="col-md-4"></div>
+    </section>
+    <!-- 預留空白處 -->
+    <section class="col-md-4"></section>
   </div>
 </div>
