--- a/app/worship.html
+++ b/app/worship.html
@@ -5,10 +5,13 @@ engine: ejs
 current: worship
 ---
 
-<div class="container">
-  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h4"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+<div class="content container">
 
-  <div class="row justify-content-center">
+  <!-- 標題 -->
+  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h6"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+
+  <!-- 線上祭拜流程 -->
+  <section class="row justify-content-center">
     <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
@@ -49,8 +52,9 @@ current: worship
         </div>
       </div>
     </div>
-  </div>
-  <div class="row justify-content-center">
+  </section>
+  <!-- 虔誠參拜 -->
+  <section class="row justify-content-center">
     <div class="col-9">
       <h5 class="ml-sm-5 pl-sm-3 py-5">步驟三：虔誠參拜</h5>
 
@@ -76,5 +80,5 @@ current: worship
         <button type="button" class="btn btn-primary px-4 worship-btn" id="stepThree">下一步</button>
       </div>
     </div>
-  </div>
+  </section>
 </div>
