--- a/app/worshipShuwen.html
+++ b/app/worshipShuwen.html
@@ -5,10 +5,14 @@ engine: ejs
 current: worshipShuwen
 ---
 
-<div class="container">
-  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h4"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+<div class="content container">
 
-  <div class="row justify-content-center">
+  <!-- 標題 -->
+  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h4"><a id="maincontent" href="#" title="中央主要內容區"
+        accesskey="C">:::</a></span></h1>
+
+  <!-- 線上祭拜流程 -->
+  <section class="row justify-content-center">
     <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
@@ -49,22 +53,14 @@ current: worshipShuwen
         </div>
       </div>
     </div>
-  </div>
-  <div class="row justify-content-center">
+  </section>
+  <!-- 默念疏文 -->
+  <section class="row justify-content-center">
     <div class="col-9">
       <h5 class="ml-sm-5 pl-sm-3 py-5">
         步驟四：請默念疏文
-        <button type="button" class="btn btn-outline-primary">
-          播放語音
-        </button>
-        <audio id="audio1" controls>
-          <source id="s" src="/app/assets/file/shuwen.wma" type="audio/wma"  title="Little Hoot Theme Song" />
-        </audio>
-        <audio id="audio1" controls>
-          <source id="s" src="./assets/file/shuwen.mp3" type="audio/mp3"  title="Little Hoot Theme Song" />
-        </audio>
-        <audio id="audio1" controls>
-          <source id="s" src="https://s3-ap-northeast-1.amazonaws.com/dazedbear-assets/Bluebird.mp3" type="audio/mp3"  title="Little Hoot Theme Song" />
+        <audio controls>
+          <source src="./assets/file/shuwen.mp3" type="audio/mp3" title="語音播放" />
         </audio>
       </h5>
 
@@ -77,11 +73,12 @@ current: worshipShuwen
       <div class="ml-sm-5 pl-sm-3 bg bg-Shuwen"></div>
 
       <div class="my-5 text-right">
-        <button type="button" class="btn btn-outline-primary px-4 mr-3 worship-btn mb-3 mb-sm-0" onclick="location.href='./worship.html'">
+        <button type="button" class="btn btn-outline-primary px-4 mr-3 worship-btn mb-3 mb-sm-0"
+          onclick="location.href='./worship.html'">
           上一步
         </button>
         <button type="button" class="btn btn-primary px-4 worship-btn" id="stepFour">下一步</button>
       </div>
     </div>
-  </div>
+</div>
 </div>
