--- a/app/information.html
+++ b/app/information.html
@@ -5,44 +5,44 @@ engine: ejs
 current: information
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">訊息專區</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="訊息專區">訊息專區</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">訊息專區</h1>
 
-  <div class="row mb-5">
+  <!-- 主要內容 -->
+  <section class="row mb-5">
     <div class="col-md-6 mb-3 mb-md-0">
-      <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationNews.html" role="button">
-        <div>
-          <!-- <img src="./assets/images/message.svg" alt=""> -->
-      </div>
+      <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationNews.html" title="前往最新消息" role="button">
         最新消息
       </a>
     </div>
     <div class="col-md-6 mb-3 mb-md-0">
-      <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationPictures.html" role="button">
-        <!-- <object type="image/svg+xml" data="./assets/images/image.svg" class="icon mr-3"></object> -->
+      <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationPictures.html" title="前往活動照片" role="button">
         活動照片
       </a>
     </div>
     <div class="col-md-6 mb-3 mb-md-0">
-      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="templeInfo.html" role="button">
-        <!-- <object type="image/svg+xml" data="./assets/images/temple.svg" class="icon mr-3"></object> -->
+      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="templeInfo.html" title="前往寺廟資訊" role="button">
         寺廟資訊
       </a>
     </div>
     <div class="col-md-6 mb-3 mb-md-0">
-      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="burnSchedule.html" role="button">
-        <!-- <object type="image/svg+xml" data="./assets/images/calendar.svg" class="icon mr-3"></object> -->
+      <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="burnSchedule.html" title="前往集中燒化時程" role="button">
         集中燒化時程
       </a>
     </div>
-  </div>
+  </section>
 
 </div>
