--- a/app/informationNews.html
+++ b/app/informationNews.html
@@ -5,22 +5,30 @@ engine: ejs
 current: informationNews
 ---
 
-<div class="container min-h">
+<div class="content container min-h">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">最新消息</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="最新消息">最新消息</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">最新消息</h1>
 
-  <ul class="my-5">
-    <li class="mb-3"><a href="informationNews_109.html">109 年度</a></li>
-    <li class="mb-3"><a href="informationNews_108.html">108 年度</a></li>
-    <li class="mb-3"><a href="informationNews_107.html">107 年度</a></li>
-  </ul>
+  <!-- 主要內容 -->
+  <section>
+    <ul class="my-5">
+      <li class="mb-3"><a href="informationNews_109.html" title="109 年度的最新消息">109 年度</a></li>
+      <li class="mb-3"><a href="informationNews_108.html" title="108 年度的最新消息">108 年度</a></li>
+      <li class="mb-3"><a href="informationNews_107.html" title="107 年度的最新消息">107 年度</a></li>
+    </ul>
+  </section>
 
 </div>
