--- a/app/informationNews_109.html
+++ b/app/informationNews_109.html
@@ -5,60 +5,68 @@ engine: ejs
 current: informationNews_109
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">109 年度</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="109 年度">109 年度</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">109 年度</h1>
 
+  <!-- 主要內容 -->
   <div class="mb-5">
-
     <div class="list-group">
-      <!-- 1 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      <!-- 109.08.13 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">109 年度中元普渡紙錢集中燒活動期程表</h2>
         <p><small class="mb-2">109.08.13</small></p>
         <p class="text-mul-truncate">本年度中元普渡活動時間為 109 年 8 月 19 日～9 月 16 日
           (農曆七月一日至二十九日)，為期一個月。民眾及各寺廟、社區大樓、公司行號或其他需要紙錢專用袋、封條及疏文的單位，8 月 3 日起均可向當地清潔隊登記免費索取。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1090813.html" role="button">閱讀更多...</a>
+          <a class="text-primary stretched-link" href="information_1090813.html" title="前往 109 年 8 月 13 日的新聞內容" role="button">閱讀更多...</a>
         </div>
-      </div>
-      <!-- 2 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      </section>
+      <!-- 109.08.12 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">中元普渡時節到 紙錢減量空污少 祭祀拜拜少燒金 以功代金最誠心</h2>
         <p><small class="mb-2">109.08.12</small></p>
         <p class="text-mul-truncate">高雄市今 (12)
           日於南區資源回收廠舉行「中元普渡以功代金暨淨爐灑淨祈福法會」儀式，由佛光山寺慧融法師親臨主持儀式，市府副秘書長張裕榮帶領市府各局處同仁與臨海工業區服務中心、中油大林煉油廠、中鋼公司、台電大林廠等共同參與，在法師帶領下繞行廠區並灑淨焚化爐，昭告陰陽兩界今（109）年度中元普渡紙錢集中燒化活動起跑，並鼓勵民眾「以功代金」做愛心。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1090812.html" role="button">
+          <a class="text-primary stretched-link" href="information_1090812.html" title="前往 109 年 8 月 12 日的新聞內容" role="button">
             閱讀更多...
           </a>
         </div>
-      </div>
-      <!-- 3 -->
-      <div class="list-group-item list-group-item-action border-under p-4">
+      </section>
+      <!-- 109.07.27 的新聞 -->
+      <section class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">玉皇宮「燒紙錢」竄黑煙 民眾怒投訴</h2>
         <p><small class="mb-2">109.07.27</small></p>
         <p class="text-mul-truncate">住在高雄玉皇宮附近的民眾控訴，金紙爐燒出大量黑煙，造成空汙，氣到拍影片 po
           網向環保局檢舉，玉皇宮解釋，他們已經使用環保金爐，只是星期天剛好遇到農曆 6 月 6 日，信徒來補運燒紙錢，才會過量，環保局表示他們當天查訪 3 次，已經沒有冒黑煙，如果檢舉屬實，還是會依空汙法開罰，1200 元到
           10 萬元不等的罰鍰。
         </p>
+        <!-- 按鈕 -->
         <div class="d-flex w-100 justify-content-end">
-          <a class="text-primary stretched-link" href="information_1090727.html" role="button">
+          <a class="text-primary stretched-link" href="information_1090727.html" title="前往 109 年 7 月 27 日的新聞內容" role="button">
             閱讀更多...
           </a>
         </div>
-      </div>
+      </section>
     </div>
   </div>
 </div>
