--- a/app/informationPicture_107.html
+++ b/app/informationPicture_107.html
@@ -5,29 +5,35 @@ engine: ejs
 current: informationPicture_107
 ---
 
-<div class="container min-h">
+<div class="content container min-h">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
       <li class="breadcrumb-item h6">
-        <a href="index.html" class="text-dark">首頁</a>
+        <a href="index.html" class="text-dark" title="首頁">首頁</a>
       </li>
       <li class="breadcrumb-item h6">
-        <a href="information.html" class="text-dark">訊息專區</a>
+        <a href="information.html" class="text-dark" title="訊息專區">訊息專區</a>
       </li>
       <li class="breadcrumb-item h6">
-        <a href="informationPictures.html" class="text-dark">活動照片</a>
+        <a href="informationPictures.html" class="text-dark" title="活動照片">活動照片</a>
       </li>
-      <li class="breadcrumb-item active h6" aria-current="page">107 年度</li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="107 年度">107 年度</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">107 年度</h1>
 
+  <!-- 主要內容 -->
   <div class="mb-5">
     <div class="list-group">
       <!-- 107 年以功代金成果發表會 (107.10.12) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">以功代金成果發表會</h2>
           <h2 class="h5 mb-2">107.10.12</h2>
@@ -44,10 +50,10 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-1003.jpg" alt="107 年成果發表會第三張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 107 年中元普渡紙錢集中燒辦理現況 (107.08.11~09.09) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡紙錢集中燒辦理現況</h2>
           <h2 class="h5 mb-2">107.08.11 至 107.09.09</h2>
@@ -64,10 +70,10 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-0903.jpg" alt="107 年中元普渡紙錢集中燒化第三張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 107 年中元普渡以功代金暨淨爐灑淨祈福法會 (107.08.07) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
           <h2 class="h5 mb-2">107.08.07</h2>
@@ -81,10 +87,10 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-09.jpg" alt="107 年中元普渡祈福法會第二張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 清明節紙錢集中燒 (107.03.25-107.04.07) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
           <h2 class="h5 mb-2">107.03.25 至 107.04.07</h2>
@@ -98,10 +104,10 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-07.jpg" alt="107 年清明節紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 春節及天公生紙錢集中燒 (107.02.21-107.02.27) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
           <h2 class="h5 mb-2">107.02.21 至 107.02.27</h2>
@@ -117,10 +123,10 @@ current: informationPicture_107
               alt="107 年春節及天公生紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 107 年高雄市成果發表會 (107.01.30) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">高雄市成果發表會</h2>
           <h2 class="h5 mb-2">107.01.30</h2>
@@ -140,8 +146,8 @@ current: informationPicture_107
               alt="107 年高雄市成果發表會第三張圖片" />
           </div>
         </div>
-      </div>
-
+      </section>
     </div>
   </div>
+  
 </div>
