--- a/app/informationPicture_108.html
+++ b/app/informationPicture_108.html
@@ -5,23 +5,29 @@ engine: ejs
 current: informationPicture_108
 ---
 
-<div class="container min-h">
+<div class="content container min-h">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationPictures.html" class="text-dark">活動照片</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">108 年度</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationPictures.html" class="text-dark" title="活動照片">活動照片</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="108 年度">108 年度</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="my-5 border-width pl-3">108 年度</h1>
 
+  <!-- 主要內容 -->
   <div class="mb-5">
     <div class="list-group">
       <!-- 108 年以功代金成果發表會 (108.11.07) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">以功代金成果發表會</h2>
           <h2 class="h5 mb-2">108.11.07</h2>
@@ -38,10 +44,10 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-1104.jpg" alt="108 年成果發表會第三張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 108 年中元普渡紙錢集中燒辦理現況 (108.08.01~08.29) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡紙錢集中燒辦理現況</h2>
           <h2 class="h5 mb-2">108.08.01 至 108.08.29</h2>
@@ -58,10 +64,10 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-0803.jpg" alt="107 年中元普渡紙錢集中燒化第三張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 108 年中元普渡以功代金暨淨爐灑淨祈福法會 (108.07.24) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
           <h2 class="h5 mb-2">108.07.24</h2>
@@ -75,10 +81,10 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-071.jpg" alt="108 年中元普渡祈福法會第二張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 清明節紙錢集中燒 (108.03.30-108.04.06) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
           <h2 class="h5 mb-2">108.03.30 至 108.04.06</h2>
@@ -92,10 +98,10 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-04.jpg" alt="108 年清明節紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 春節及天公生紙錢集中燒 (108.02.09-108.02.14) -->
-      <div class="border-under p-4">
+      <section class="border-under p-4">
         <div class="d-flex justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
           <h2 class="h5 mb-2">108.02.09 至 108.02.14</h2>
@@ -111,8 +117,7 @@ current: informationPicture_108
               alt="108 年春節及天公生紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </div>
-
+      </section>
     </div>
   </div>
 
