--- a/app/information_1071012.html
+++ b/app/information_1071012.html
@@ -5,35 +5,41 @@ engine: ejs
 current: information_1071012
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews_107.html" class="text-dark">107 年度</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">以功代金少燒紙錢 24 公噸 相當 85 大樓高度的 52 倍</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews_107.html" class="text-dark" title="107 年度">107 年度</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="新聞標題">以功代金少燒紙錢 24 公噸 相當 85 大樓高度的 52 倍</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="border-width mt-5 pl-3">以功代金少燒紙錢 24 公噸 相當 85 大樓高度的 52 倍</h1>
   <p><small>更新日期：107.10.12</small></p>
 
+  <!-- 主要內容 -->
   <div class="row my-5">
-    <!-- 左欄 -->
-    <div class="col-md-8">
+    <!-- 新聞內文 -->
+    <section class="col-md-8">
       <p>
-        高雄市政府環保局持續推動「以功代金」，<strong>今 (12) 日</strong>舉行成果發表會，截至<strong>9 月底止</strong>，捐款金額<strong>超過 200 萬元</strong>，換算購得紙錢總重量<strong>約 24 公噸</strong>，疊起來總高度<strong>17,920 公尺</strong>，相當於高雄 85 大樓高度的<strong>52 倍</strong>，減少<strong>約 1.56 萬棵樹</strong> 1 日所吸收的二氧化碳量。環保局與大家一同努力降低空氣污染、環保愛地球，同時造福社福團體、幫助弱勢團體。
+        高雄市政府環保局持續推動「以功代金」，今 (12) 日舉行成果發表會，截至 9 月底止，捐款金額<strong>超過 200 萬元</strong>，換算購得紙錢總重量<strong>約 24 公噸</strong>，疊起來總高度<strong> 17,920 公尺</strong>，相當於高雄 85 大樓高度的<strong>52 倍</strong>，減少<strong>約 1.56 萬棵樹</strong> 1 日所吸收的二氧化碳量。環保局與大家一同努力降低空氣污染、環保愛地球，同時造福社福團體、幫助弱勢團體。
       </p>
       <p>
         環保局<strong>從 95 年</strong>積極推動「以功代金」，更首創全年與四大超商合作，讓民眾隨時可透過全家、OK、萊爾富、統一等四大超商電子通路平台捐助心路、家扶、勵馨、創世會等 15 家社福團體，捐款金額逐年增加。成果發表會上，社福團體代表感謝民眾及企業將原本要購買紙錢的金額轉為捐款，一同幫助弱勢。家庭扶助基金會高雄市南區分事務所主任郭淑美感謝有這麼好的措施，把要燒的紙錢轉為慈善工作，不但個案蒙福利，個人也蒙福，愛地球也愛自己和別人，意義非凡。星星兒社會福利基金會督導李碧琳分享，有民眾認同以功代金的意義，減少空氣污染又可以幫助弱勢團體，因此每個月固定捐款，非常感謝。愛心企業代表晟業鋁業有限公司總經理黃團賓表示，本著企業回饋精神，公司本來就有長期捐助社福團體，因為「以功代金」這個活動又加碼，基於環保精神，以身作則，減少空污，減碳做環保，為自己也為下一代。
       </p>
       <p>
-        環保局長蔡孟裕表示，民眾過去買紙錢燒金紙表達對老天爺和神明保佑的感謝，現在希望把這樣的資源回饋給社會上最需要幫助的人。「以功代金」捐款金額<strong>從 95 年的 18 萬元</strong>，逐年增加到<strong>去年 (106)的 233 萬元</strong>，今年截至<strong>9 月底止</strong>，捐款金額<strong>已超過 200 萬元</strong>，如果拿去買紙錢焚燒，數量<strong>多達 24 公噸</strong>，約產生<strong> 84.7 公斤 TSP (總懸浮微粒)、74.9 公斤 PM10 (懸浮微粒)、58.5 公斤 PM2.5 (細懸浮微粒)、734 公斤一氧化碳、467 公斤二氧化碳</strong>；以<strong>減少 467 公斤二氧化碳排放量</strong>為例，相當於<strong>1.56 萬顆樹</strong> 1 日吸收的二氧化碳量。公私協力一同為環保盡心力、為弱勢團體貢獻愛心，誠心不減，可說一舉數得。成果發表會上，眾人也約定將持續努力，號召民眾及企業團體共同響應「以功代金」，希望超越去年 233 萬元成效，再創佳績，把大家敬天謝神的觀念回饋給社會，讓社會更祥和。
+        環保局長蔡孟裕表示，民眾過去買紙錢燒金紙表達對老天爺和神明保佑的感謝，現在希望把這樣的資源回饋給社會上最需要幫助的人。「以功代金」捐款金額<strong>從 95 年的 18 萬元</strong>，逐年增加到<strong>去年 (106)的 233 萬元</strong>，今年截至 9 月底止，捐款金額<strong>已超過 200 萬元</strong>，如果拿去買紙錢焚燒，數量<strong>多達 24 公噸</strong>，約產生<strong> 84.7 公斤 TSP (總懸浮微粒)、74.9 公斤 PM10 (懸浮微粒)、58.5 公斤 PM2.5 (細懸浮微粒)、734 公斤一氧化碳、467 公斤二氧化碳</strong>；以減少 467 公斤二氧化碳排放量為例，相當於 1.56 萬顆樹 1 日吸收的二氧化碳量。公私協力一同為環保盡心力、為弱勢團體貢獻愛心，誠心不減，可說一舉數得。成果發表會上，眾人也約定將持續努力，號召民眾及企業團體共同響應「以功代金」，希望超越去年 233 萬元成效，再創佳績，把大家敬天謝神的觀念回饋給社會，讓社會更祥和。
       </p>
-    </div>
-    <!-- 右欄 -->
-    <div class="col-md-4"></div>
+    </section>
+    <!-- 預留空白處 -->
+    <section class="col-md-4"></section>
   </div>
 </div>
