--- a/app/information_1090813.html
+++ b/app/information_1090813.html
@@ -5,26 +5,32 @@ engine: ejs
 current: information_1090813
 ---
 
-<div class="container">
+<div class="content container">
+
   <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb my-4">
-      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark">首頁</a></li>
-      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark">訊息專區</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark">最新消息</a></li>
-      <li class="breadcrumb-item h6"><a href="informationNews_109.html" class="text-dark">109 年度</a></li>
-      <li class="breadcrumb-item active h6" aria-current="page">109 年度中元普渡紙錢集中燒活動期程表</li>
+  <nav aria-label="breadcrumb" class="my-4">
+    <div id="tabC">
+      <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item h6"><a href="index.html" class="text-dark" title="首頁">首頁</a></li>
+      <li class="breadcrumb-item h6"><a href="information.html" class="text-dark" title="訊息專區">訊息專區</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews.html" class="text-dark" title="最新消息">最新消息</a></li>
+      <li class="breadcrumb-item h6"><a href="informationNews_109.html" class="text-dark" title="109 年度">109 年度</a></li>
+      <li class="breadcrumb-item active h6" aria-current="page" title="新聞標題">109 年度中元普渡紙錢集中燒活動期程表</li>
     </ol>
   </nav>
 
+  <!-- 標題 -->
   <h1 class="border-width mt-5 pl-3">109 年度中元普渡紙錢集中燒活動期程表</h1>
   <p><small>更新日期：109.08.13</small></p>
 
+  <!-- 主要內容 -->
   <div class="row my-5">
-    <!-- 左欄 -->
-    <div class="col-md-8">
+    <!-- 新聞內文 -->
+    <section class="col-md-8">
       <p>
-        本年度中元普渡活動時間為<strong>109 年 8 月 19 日～ 9 月 16 日(農曆七月一日至二十九日)</strong>，為期一個月。民眾及各寺廟、社區大樓、公司行號或其他需要紙錢專用袋、封條及疏文的單位，<strong>8 月 3 日起</strong>均可向當地清潔隊登記免費索取。
+        本年度中元普渡活動時間為<strong> 109 年 8 月 19 日～ 9 月 16 日(農曆七月一日至二十九日)</strong>，為期一個月。民眾及各寺廟、社區大樓、公司行號或其他需要紙錢專用袋、封條及疏文的單位，<strong>8 月 3 日起</strong>均可向當地清潔隊登記免費索取。
       </p>
       <p>
         因數量有限，未取得專用袋之民眾，亦可自行妥善包裝普度紙錢，再通知清潔隊運送，本項運送及代燒服務皆是免費的。
@@ -33,9 +39,9 @@ current: information_1090813
         透過集中焚燒的紙錢，能夠有效控制焚燒之後所產生的空氣污染物，縱使在大氣條件良好的夏季，也都讓我們為空氣品質、良好環境多盡一份心力。
       </p>
       <p><strong>109 年度中元普渡紙錢集中燒活動期程表</strong></p>
-      <img src="http://www.escotech.com.tw/pudu/images/109_0813.jpg" alt="109年度中元普渡紙錢集中燒活動期程表">
-    </div>
-    <!-- 右欄 -->
-    <div class="col-md-4"></div>
+      <img src="http://www.escotech.com.tw/pudu/images/109_0813.jpg" alt="109 年度中元普渡紙錢集中燒活動期程表" class="img-fluid">
+    </section>
+    <!-- 預留空白處 -->
+    <section class="col-md-4"></section>
   </div>
 </div>
