--- a/app/worshipCarryOut.html
+++ b/app/worshipCarryOut.html
@@ -5,10 +5,13 @@ engine: ejs
 current: worshipCarryOut
 ---
 
-<div class="container">
-  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h4"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+<div class="content container">
 
-  <div class="row justify-content-center">
+  <!-- 標題 -->
+  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h6"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+
+  <!-- 線上祭拜流程 -->
+  <section class="row justify-content-center">
     <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
@@ -49,8 +52,9 @@ current: worshipCarryOut
         </div>
       </div>
     </div>
-  </div>
-  <div class="row justify-content-center">
+  </section>
+  <!-- 感謝內容 -->
+  <section class="row justify-content-center">
     <div class="col-9 text-center">
       <p class="h3 ml-sm-5 pl-sm-3 my-5">您好 感謝您!</p>
       <p class="h3 ml-sm-5 pl-sm-3 mb-5 worship-thanks-text">
@@ -66,5 +70,5 @@ current: worshipCarryOut
         </button>
       </div>
     </div>
-  </div>
+  </section>
 </div>
