--- a/app/worshipChooseOfferings.html
+++ b/app/worshipChooseOfferings.html
@@ -5,10 +5,13 @@ engine: ejs
 current: worshipChooseOfferings
 ---
 
-<div class="container">
-  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h4"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+<div class="content container">
 
-  <div class="row justify-content-center">
+  <!-- 標題 -->
+  <h1 class="my-5 border-width pl-3">線上祭拜<span class="h6"><a id="maincontent" href="#" title="中央主要內容區" accesskey="C">:::</a></span></h1>
+
+ <!-- 線上祭拜流程 -->
+  <section class="row justify-content-center">
     <div class="col-11 col-sm-8 pl-0 pl-sm-3 mr-3 mr-sm-0">
       <div class="row mb-5">
         <div class="col pr-0">
@@ -49,11 +52,11 @@ current: worshipChooseOfferings
         </div>
       </div>
     </div>
-  </div>
-  <div class="row justify-content-center">
+  </section>
+  <!-- 祭品 -->
+  <section class="row justify-content-center">
     <div class="col-10 col-sm-9">
       <h5 class="ml-sm-5 pl-sm-3 py-5">步驟二：請選擇祭品</h5>
-
       <div class="ml-sm-5 pl-sm-3">
         <div class="row">
           <div class="col-6 col-sm-4">
@@ -141,5 +144,6 @@ current: worshipChooseOfferings
         <button type="button" class="btn btn-primary px-4 worship-btn" id="stepTwo">下一步</button>
       </div>
     </div>
-  </div>
+  </section>
+
 </div>
