dev - 修改線上祭拜表單，播放語音

--- a/app/worshipShuwen.html
+++ b/app/worshipShuwen.html
@@ -57,12 +57,15 @@ current: worshipShuwen
   <!-- 默念疏文 -->
   <section class="row justify-content-center">
     <div class="col-9">
-      <h5 class="ml-sm-5 pl-sm-3 py-5">
-        步驟四：請默念疏文
+      <div class="d-flex align-items-center">
+        <h5 class="ml-sm-5 pl-sm-3 py-5 mr-2">
+          步驟四：請默念疏文
+        </h5>
+        <!-- 語音檔 -->
         <audio controls>
           <source src="./assets/file/shuwen.mp3" type="audio/mp3" title="語音播放" />
         </audio>
-      </h5>
+      </div>
 
       <ul class="ml-sm-5 pl-sm-3">
         <li>姓名:&emsp;<span id="userInfo_name"></span></li>
