--- a/app/worshipUserInfo.html
+++ b/app/worshipUserInfo.html
@@ -64,14 +64,32 @@ current: worshipUserInfo
             <div class="form-group">
               <label for="userName">姓名 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="userName" aria-describedby="姓名" placeholder="請輸入姓名" />
+              <div class="invalid-feedback">
+                格式錯誤!
+              </div>
+              <div class="valid-feedback">
+                正確!
+              </div>
             </div>
             <div class="form-group">
               <label for="companyName">公司名稱 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="companyName" aria-describedby="公司名稱" placeholder="請輸入公司名稱" />
+              <div class="invalid-feedback">
+                格式錯誤!
+              </div>
+              <div class="valid-feedback">
+                正確!
+              </div>
             </div>
             <div class="form-group">
               <label for="userAddress">地址 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="userAddress" aria-describedby="地址" placeholder="請輸入地址" />
+              <div class="invalid-feedback">
+                格式錯誤!
+              </div>
+              <div class="valid-feedback">
+                正確!
+              </div>
             </div>
           </div>
           <div class="my-5 text-right">
